# ChangeLog for app-cdr/k3b
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-cdr/k3b/ChangeLog,v 1.188 2007/04/13 22:14:43 dragonheart Exp $

  13 Apr 2007; <dragonheart@gentoo.org> k3b-1.0.ebuild:
  worked on my ppc G3

  12 Apr 2007; Carsten Lohrke <carlo@gentoo.org> k3b-1.0.ebuild:
  Add a message regarding installation of k3bsetup, see bug #174248.

  26 Mar 2007; Marcus D. Hanwell <cryos@gentoo.org> -k3b-0.12.14.ebuild,
  -k3b-1.0_rc6.ebuild:
  Removed old versions.

  25 Mar 2007; Marcus D. Hanwell <cryos@gentoo.org>
  +files/k3b-1.0-alsa-fix.patch, k3b-1.0.ebuild:
  Fix alsa configure issue, closes bug 152321, patch from upstream SVN commit.

*k3b-1.0 (17 Mar 2007)

  17 Mar 2007; Marcus D. Hanwell <cryos@gentoo.org> -k3b-1.0_rc4.ebuild,
  -k3b-1.0_rc5.ebuild, +k3b-1.0.ebuild:
  Version bump, closes bug 171196.

  11 Feb 2007; Ioannis Aslanidis <deathwing00@gentoo.org>
  -k3b-1.0_beta1.ebuild:
  Cleaning up old beta version.

*k3b-1.0_rc6 (11 Feb 2007)

  11 Feb 2007; Ioannis Aslanidis <deathwing00@gentoo.org>
  +k3b-1.0_rc6.ebuild:
  Version bump.

*k3b-1.0_rc5 (09 Feb 2007)

  09 Feb 2007; Marcus D. Hanwell <cryos@gentoo.org> -k3b-1.0_rc2.ebuild,
  -k3b-1.0_rc3.ebuild, +k3b-1.0_rc5.ebuild:
  Version bump, bug 164766. Removed some old rc versions.

  22 Jan 2007; Steve Dibb <beandog@gentoo.org> k3b-0.12.17.ebuild:
  amd64 stable, bug 157451

*k3b-1.0_rc4 (21 Jan 2007)

  21 Jan 2007; Ioannis Aslanidis <deathwing00@gentoo.org>
  +k3b-1.0_rc4.ebuild:
  Version bump as requested in bug #162781.

  05 Jan 2007; Diego Pettenò <flameeyes@gentoo.org> k3b-0.12.14.ebuild,
  k3b-0.12.17.ebuild, k3b-1.0_beta1.ebuild, k3b-1.0_rc2.ebuild,
  k3b-1.0_rc3.ebuild:
  Convert to use elog.

*k3b-1.0_rc3 (04 Jan 2007)

  04 Jan 2007; Marcus D. Hanwell <cryos@gentoo.org> +k3b-1.0_rc3.ebuild:
  Version bump.

  31 Dec 2006; Steve Dibb <beandog@gentoo.org> -k3b-0.12.15.ebuild,
  -k3b-0.12.16.ebuild, -k3b-1.0_rc1.ebuild: