@@ -18,14 +18,14 @@ EBUILD k3b-0.12.17.ebuild 3419 RMD160 df2e1baa173c34423522df391fdc2888f2256308 S
 MD5 334097dbea1f4e30d4feea4f452cd2f3 k3b-0.12.17.ebuild 3419
 RMD160 df2e1baa173c34423522df391fdc2888f2256308 k3b-0.12.17.ebuild 3419
 SHA256 0fb65ffcd8fd3a6b9f7f48ea1696b0210f6d3d18a73384a593c27677804774e9 k3b-0.12.17.ebuild 3419
-EBUILD k3b-1.0.ebuild 4197 RMD160 21ede97aa567347e32979a6d242562ba95536f2c SHA1 af75b6e35da7cde01e06f7eb44a9428101441932 SHA256 84298239af52c21d3fb06c514b5935fa1e01177e3ed31768dd002b0bfb6c99e1
-MD5 6b0acf14220bb7833536afef6c333114 k3b-1.0.ebuild 4197
-RMD160 21ede97aa567347e32979a6d242562ba95536f2c k3b-1.0.ebuild 4197
-SHA256 84298239af52c21d3fb06c514b5935fa1e01177e3ed31768dd002b0bfb6c99e1 k3b-1.0.ebuild 4197
-MISC ChangeLog 27346 RMD160 656274d740adc77eff1a01900d49fc4e5a2180e7 SHA1 52cb7714c68dad41d0022d37665990dc47a2443d SHA256 97e2c44eddf094de07f5fceaf390400457f5471be83212eaf37ca65eb98482c1
-MD5 96a5b2f61a3d3a1540f2154bb33bcc14 ChangeLog 27346
-RMD160 656274d740adc77eff1a01900d49fc4e5a2180e7 ChangeLog 27346
-SHA256 97e2c44eddf094de07f5fceaf390400457f5471be83212eaf37ca65eb98482c1 ChangeLog 27346
+EBUILD k3b-1.0.ebuild 4208 RMD160 b9f8cac23a45d23cb99fdd71718da1e132b620b2 SHA1 1e4187e202f4eabd220b5759452b052ec589a6ac SHA256 35d1438f6ce68c9701dd8e51b12c7153691574cef1d0bbbde83506099e7fd708
+MD5 f4f38fde870fb423fc173fbafec17d88 k3b-1.0.ebuild 4208
+RMD160 b9f8cac23a45d23cb99fdd71718da1e132b620b2 k3b-1.0.ebuild 4208
+SHA256 35d1438f6ce68c9701dd8e51b12c7153691574cef1d0bbbde83506099e7fd708 k3b-1.0.ebuild 4208
+MISC ChangeLog 27425 RMD160 723ec53984cd01d78fb6aa40e696113fe503d289 SHA1 dd766543c32235d281b759bb5f9aab9e4c6f764f SHA256 16a908257ef59cdd8dede34620e3c0bd16c8cf649a517bf84ecbea8b7703dcee
+MD5 72ab3c10c01334a4b638321e5b94618c ChangeLog 27425
+RMD160 723ec53984cd01d78fb6aa40e696113fe503d289 ChangeLog 27425
+SHA256 16a908257ef59cdd8dede34620e3c0bd16c8cf649a517bf84ecbea8b7703dcee ChangeLog 27425
 MISC metadata.xml 183 RMD160 dfdbe8a9663c05a4c6ab7aaf0e1d5b35ac030e2f SHA1 44581aca775d8ca4854c53861174b6147da706b4 SHA256 d004a7535807ea599189a046ac582ca032a91f868bbcf4b72195773dfaf15462
 MD5 6cac9f56ab7373612097cef824badcf7 metadata.xml 183
 RMD160 dfdbe8a9663c05a4c6ab7aaf0e1d5b35ac030e2f metadata.xml 183
