@@ -1,6 +1,9 @@
 # ChangeLog for app-cdr/k3b
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-cdr/k3b/ChangeLog,v 1.188 2007/04/13 22:14:43 dragonheart Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-cdr/k3b/ChangeLog,v 1.189 2007/04/14 16:21:33 carlo Exp $
+
+  14 Apr 2007; Carsten Lohrke <carlo@gentoo.org> k3b-1.0.ebuild:
+  Fix bug #174554.
 
   13 Apr 2007; <dragonheart@gentoo.org> k3b-1.0.ebuild:
   worked on my ppc G3
